Fix breakage in tests https://issuetracker.google.com/issues/363264994