@@ -1,1 +1,8 @@
 apply from: rootProject.file('gradle/module-check-lib.gradle')
+
+tasks.withType(Test).configureEach {
+	doFirst {
+		// Workaround for https://issuetracker.google.com/issues/363264994
+		it.jvmArgs = it.jvmArgs -= "--add-opens=java.base/java.io=ALL-UNNAMED"
+	}
+}
